<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/distance"
        android:inputType="number"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_km"
        android:gravity="center"
        android:layout_marginTop="2dp" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_liter"
        android:gravity="center"
        android:layout_marginTop="2dp" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        android:autofillHints="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kms_liter"
        android:gravity="center"
        android:layout_marginTop="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:text="@string/total_spend"
        android:textAllCaps="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textSize="38sp"
        android:layout_marginTop="16dp"
        android:text="@string/total_value"
        android:textAllCaps="true"
        android:gravity="center" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/teal_200"
        android:padding="16dp"
        android:text="@string/calculate"
        android:textColor="#546E7A"
        android:textSize="20sp" />


</LinearLayout>